crates/aven-check/tests/fixtures/check/invalid/unbound-name.av
main =
  logger.error("a is ${a}", a)
